# project_management

./: CMakeLists.txt  main.cpp
data/: products.db
include/: product_controller.h  product_model.h
src/: product_controller.cpp  product_model.cpp
